[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/combat/combat.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/main/pokemon-entries.gd" type="Script" id=3]
[ext_resource path="res://scenes/pokemon/debug_panel/debug_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/VBoxContainer.gd" type="Script" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends Node


func _input(event):
	if event is InputEventKey:
		if event.scancode == KEY_E and event.pressed and !event.is_echo():
			var dir = Directory.new()
			dir.remove(GameSave.get_save_file_path())
			show_text('Save file deleted')
		if event.scancode == KEY_Q and event.pressed and !event.echo:
			get_tree().quit()


# TODO: make this an addon?
var t
func show_text(text):
	if t:
		return
	if t == null:
		t = Label.new()
		add_child(t)
	t.text = text
	t.rect_scale = Vector2(2, 2)
	t.rect_position = Vector2(10,10)
	var twn = Tween.new()
	add_child(twn)
	twn.interpolate_property(t, 'modulate:a', 1, 0, 2, Tween.TRANS_QUAD, Tween.EASE_IN_OUT)
	twn.start()
	yield(twn, \"tween_completed\")
	twn.queue_free()
	t.queue_free()
"

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="KeyboardShortcuts" type="Node" parent="."]
script = SubResource( 1 )

[node name="Combat" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 24
custom_constants/margin_bottom = -12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 24.0
margin_top = 30.0
margin_right = 1004.0
margin_bottom = 612.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 67.0
margin_bottom = 582.0

[node name="Header" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 67.0
margin_bottom = 14.0
text = "Pokemons"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 67.0
margin_bottom = 518.0
rect_min_size = Vector2( 0, 500 )
scroll_horizontal_enabled = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 297.0
margin_bottom = 582.0

[node name="Header" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 226.0
margin_bottom = 14.0
text = "Stats (Pokemon Resource Dynamic)"

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 226.0
margin_bottom = 118.0
rect_min_size = Vector2( 100, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 780.0
margin_right = 980.0
margin_bottom = 582.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "PokemonResource"

[node name="PanelContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0

[node name="PanelContainer2" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 36.0
margin_right = 200.0
margin_bottom = 50.0
[connection signal="pokemon_hovered" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer2/ScrollContainer" to="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer" method="_on_ScrollContainer_pokemon_hovered"]
[connection signal="pokemon_selected" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer2/ScrollContainer" to="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer" method="_on_ScrollContainer_pokemon_selected"]
